# reputation-bot-ml

./: .gitignore  README.md  dune-project  dune-workspace  reputation_bot.opam
ascetic_ddd/: aggregate_root.ml  aggregate_root.mli  ascetic_ddd.ml  bounded_int.ml  bounded_int.mli  clock.ml  clock.mli  decimal.ml  decimal.mli  domain_event.ml  domain_event.mli  dune  entity_id.ml  entity_id.mli  result_ext.ml  result_ext.mli  unit_of_work.ml  unit_of_work.mli
ascetic_ddd/encryption/: ascetic_encryption.ml  crypto_shredding.ml  dek.ml  dune  forgettable_payload.ml  kek.ml
ascetic_ddd/gherkin/: ascetic_gherkin.ml  dune  gherkin_ast.ml  gherkin_lexer.mll  gherkin_parser.mly  gherkin_runner.ml
ascetic_ddd/specification/: ascetic_spec.ml  dune  spec_ast.ml  spec_eval.ml  spec_lexer.mll  spec_parse.ml  spec_parser.mly  spec_sql.ml
reputation/adapters/telegram/: dune  telegram_bot.ml  telegram_types.ml  telegram_update_handler.ml  trigger_parser.ml
reputation/application/: deps.ml  dune  reputation_app.ml
reputation/application/commands/: add_reaction.ml  apply_ring_correction.ml  attach_chat.ml  (+6 more)
reputation/domain/: dune  ids.ml  reputation_domain.ml
reputation/infrastructure/: dune  reputation_infra.ml
reputation/infrastructure/encryption/: aes_gcm_provider.ml  vault_kms_provider.ml
reputation/infrastructure/fraud/: fraud_detection_pg.ml  graph_queries.ml
reputation/infrastructure/persistence/: caqti_unit_of_work.ml  community_repository_pg.ml  event_store_pg.ml  external_id_mapping_pg.ml  message_repository_pg.ml
reputation/infrastructure/persistence/migrations/: 001_initial_schema.sql  002_event_store.sql  003_materialized_views.sql  004_fraud_functions.sql
test/acceptance/: acceptance_tests.ml  dune  feature_tests.ml  gherkin.ml  test_harness.ml
test/features/: budget.feature  fraud.feature  vote_casting.feature
test/support/: dune  in_memory_repos.ml
verification/: dual_karma.mlw  dune  fraud_score.mlw  sliding_window.mlw
(+71 files in other folders)
